<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingTop="64dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="3dp">

        <TextView
            android:id="@+id/help_recording_transactions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/help_recording_transactions"
            android:textColor="@color/colorAccent" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:background="#e0e0e0" />


        <TextView
            android:id="@+id/help_recording_transactions_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:text="@string/help_recording_transactions_detail"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="3dp">

        <TextView
            android:id="@+id/help_data_analytics_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/help_data_analytics"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:background="#e0e0e0" />


        <TextView
            android:id="@+id/help_data_analytics_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/help_data_analytics_detail"
            android:textSize="16sp"
            android:paddingTop="30dp"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="3dp">

        <TextView
            android:id="@+id/help_adjusting_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/help_adjusting_balance"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:background="#e0e0e0" />


        <TextView
            android:id="@+id/help_adjusting_balance_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/help_adjusting_balance_detail"
            android:paddingTop="30dp"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="3dp">

        <TextView
            android:id="@+id/help_Savings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/help_Savings"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:background="#e0e0e0" />


        <TextView
            android:id="@+id/help_Savings_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/help_savings_detail"
            android:textSize="16sp"
            android:paddingTop="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="3dp">

        <TextView
            android:id="@+id/help_others_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/help_others"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:background="#e0e0e0" />


        <TextView
            android:id="@+id/help_others_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/help_others_detail"
            android:textSize="16sp"
            android:paddingTop="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>